<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingVertical="100dp"
    android:paddingHorizontal="50dp"
    android:background="@color/fondo">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/titulo"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <RadioButton
            android:id="@+id/rbPAE"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pae"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/rbEAP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/eap"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/introduce"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/edtValor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_valor"
            android:inputType="numberDecimal"
            android:layout_weight="1"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnCambio"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/btn_cambiar"/>

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_marginTop="20dp"
        android:text="@string/txtResultado"
        android:layout_gravity="center"/>


</LinearLayout>